# palimpsest

./: .dir-locals.el  .gitignore  .gitmodules  .gooseignore  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  CONTEXT.md  Justfile  README.md  README.org  commit_all.sh  detect_keys.py  flake.nix  garnix.yaml  shell.nix
containers/lighthouse/: configuration.nix
docs/: manual_interventions.md
docs/adr/: 0001-flake-parts-custom-namespace.md  0002-secrets-in-separate-stash-repo.md  0003-personal-key-is-sops-admin-key.md  0004-impermanence-ephemeral-root.md  0005-aionui-tailscale-only-boundary.md  0006-tuwunel-matrix-homeserver.md  0007-custom-jmap-matrix-bridge.md  0008-aionui-matrix-via-rest-poller.md  0009-double-puppet-via-login-token.md  0010-rk1-llm-cpu-serving.md  0011-blocky-runtime-tailscale-dns.md  0012-mock-secret-fallbacks-public-eval.md  0013-uniform-bundle-consumption.md  0014-home-profiles-conditional-import.md  0015-host-user-contract.md  0016-bulbs-run-esphome-via-cloudcutter.md  0016-feature-configuration-aggregates.md  0016-jmap-bridge-own-repo.md  0017-jmap-bridge-own-repo.md  0017-matrix-hookshot-webhooks-and-feeds.md  0018-claude-relay-matrix-interface.md  0018-user-confinement-manifest-greeter.md  0019-uptime-alerting.md  0020-extract-contract-flake.md  0020-out-of-band-web-push-relay.md  0022-anyhost-greeter-runtime-binding.md  0022-monitoring-runtime-peer-resolution.md  0024-matrix-hookshot-webhooks-and-feeds.md  0024-secret-expiry-registry.md  0025-claude-relay-matrix-interface.md  0025-fleet-user-secret-consumption-purity.md  0026-host-presence-scrape-label.md  0026-uptime-alerting.md  0027-navidrome-friends-music-platform.md  0027-out-of-band-web-push-relay.md  0028-git-annex-owns-the-shared-music-library.md  0028-telemetry-durable-disk-capped-retention.md  0029-monitoring-runtime-peer-resolution.md  0029-slskd-seeds-the-library-through-the-vpn.md  0030-fleet-dns-dual-blocky.md  (+1 more)
esphome/: .gitignore  README.md  antela-a60.yaml.template  secrets.yaml.example
hosts/: default.nix
lib/: default.nix
modules/nixos/services/claude-relay/: Cargo.toml  default.nix  package.nix
modules/nixos/services/claude-relay/src/: main.rs
overlays/: default.nix
parts/: git-hooks.nix  mock-identities.nix  mock-secrets.yaml  settings.nix  shells.nix  treefmt.nix
parts/apps/push-relay/core/: Cargo.toml
parts/apps/push-relay/core/src/: lib.rs
parts/apps/push-relay/worker/: Cargo.toml
parts/apps/push-relay/worker/src/: lib.rs
pkgs/: default.nix  n8n-mcp.nix  vocabsieve.nix
research/: architecture_review.md  flake_architecture_review.md  user_config_architectures.md
scripts/: deploy-pi  sops-update-all
secrets/: git-annex.yaml  matrix.yaml  media.yaml  nebula.yaml  restic.yaml  secrets.yaml
users/: default.nix  identity-options.nix  identity.nix
utils/: default.nix
(+447 files in other folders)
